# k8s-emailer

./: .gitignore  Dockerfile  README.md  k8s_emailer.py  pyproject.toml  test-jobs.yml
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  metrics-service.yaml  serviceaccount.yaml
